Revision history for {{$dist->name}}

{{$NEXT}}

v0.0.3    2013-02-19 16:23:29 America/Chicago
    - Fixed synopsis in POD.

v0.0.2    2013-02-19 14:56:53 America/Chicago
    - Fixed module name in POD.
    - Promoted to full release.

v0.0.1    2013-02-19 03:39:00 CST6CDT
    - First version, released on an unsuspecting world.