@@ -4,7 +4,7 @@ license = MIT
 copyright_holder = Richard Simões
 copyright_year   = 2013
 
-version = v0.0.3
+version = v0.0.4
 
 [@Filter]
 -bundle = @Basic
